@@ -4,7 +4,6 @@
 |                                                           |
  ===========================================================
 
-mémoriser profils de connexion fics
 
  ===========================================================
 |                                                           |
